# CircuitScriptCompiler

./: .gitignore  Dockerfile  README.md  asmt2-video-demo.txt  asmt3-video-demo.txt  asmt4-video-demo.txt  ast.py  custom_test.py  dfa.py  enums.py  ll1_parse_table.py  meson.build  parser.py  run_compiler.py  run_lexer.sh  run_vm.py  tester.py  tokenizer.py
code_gen/: README.md  __init__.py  code_generator.py  instruction.py
docs/: dfa.tex
lexer/: README.md  __init__.py  dfa.py  enums.py  lexer.py  run_lexer.sh  tester.py  tokenizer.py
lexer/sample_code/: source_code_1.txt  source_code_2.circuit  source_code_2.txt  source_code_4.txt  source_code_5.circuit  source_code_5.txt
optimization/: README.md  optimizer.py
parser/: README.md  __init__.py  ast_generator.py  enums.py  ll1_parse_table.py  parser.py  tree_node.py
sample_code/: .gitignore  big_circuit_1.circuit  big_circuit_2.circuit  big_circuit_3.circuit  chained_gates.circuit  invalid_gate_usage.circuit  invalid_parse_tree.circuit  invalid_tokens.circuit  logic_gates.circuit  maximal_munch.circuit  optimizable.circuit  source_code_4.circuit  whitespace.circuit  wires_and_registers.circuit
sample_code/expected_output/: invalid_tokens.txt  logic_gates.txt  maximal_munch.txt  whitespace.txt  wires_and_registers.txt
sample_code/expected_output/big_circuit_1/: 1_lexer.txt  2_parser.txt  3_ast.txt  5_optimized.txt
sample_code/expected_output/big_circuit_2/: 1_lexer.txt  2_parser.txt  3_ast.txt  5_optimized.txt  5_vm.txt
src/: main.cc
vm/: README.md  meson.build
vm/src/: instruction.h  main.cc  util.h
(+65 files in other folders)
